- Env variables can be passed through to task processes by passing `--preserve_env`
  to thermos.
- Removed scheduler command line arguments:
  - `-enable_cors_support`.  Enabling CORS is now implicit by setting the argument
    `-enable_cors_for`.
  - `-deduplicate_snapshots` and `-deflate_snapshots`.  These features are good to always enable.
  - `-enable_job_updates` and `-enable_job_creation`
- Upgraded the scheduler ZooKeeper client from 3.3.4 to 3.4.6.
- Added support for jobs to specify arbitrary ZooKeeper paths for service registration.  See
  https://github.com/apache/aurora/blob/master/docs/configuration-reference.md#announcer-objects
  for details.
- Log destination is configurable for the thermos runner. See the configuration reference for details
  on how to configure destination per-process. Command line options may also be passed through the
  scheduler in order to configure the global default behavior.
- Changed scheduler logging to use logback.
  Operators wishing to customize logging may do so with standard logback configuration as described
  at http://logback.qos.ch/manual/configuration.html
  With this change, we have removed the following scheduler command line arguments as they were
  made redundant: `logtostderr`, `alsologtostderr`, `vlog`, `vmodule`, and `use_glog_formatter`.
- Added support for configuring Mesos role by passing `-mesos_role` to Aurora scheduler at start time.
  This enables resource reservation for Aurora when running in a shared Mesos cluster.

0.11.0
------
- Upgraded Mesos to 0.24.1.
- The client-side updater has been removed, along with the CLI commands that used it:
  'aurora job update' and 'aurora job cancel-update'.  Users are encouraged to take
  advantage of scheduler-driven updates (see 'aurora update -h' for usage), which has been a
  stable feature for several releases.
- The field 'JobUpdateSettings.maxWaitToInstanceRunningMs' (UpdateConfig.restart_threshold in