@@ -16,7 +16,6 @@ package org.apache.aurora.scheduler.http.api.security;
 import java.lang.reflect.Method;
 import java.util.Optional;
 import java.util.Set;
-
 import javax.servlet.Filter;
 
 import com.google.common.annotations.VisibleForTesting;
@@ -26,6 +25,7 @@ import com.google.inject.Key;
 import com.google.inject.Module;
 import com.google.inject.Provides;
 import com.google.inject.TypeLiteral;
+import com.google.inject.binder.AnnotatedBindingBuilder;
 import com.google.inject.matcher.Matcher;
 import com.google.inject.matcher.Matchers;
 import com.google.inject.name.Names;
@@ -43,6 +43,8 @@ import org.apache.aurora.scheduler.thrift.aop.AnnotatedAuroraAdmin;
 import org.apache.shiro.SecurityUtils;
 import org.apache.shiro.guice.aop.ShiroAopModule;
 import org.apache.shiro.guice.web.ShiroWebModule;
+import org.apache.shiro.session.mgt.DefaultSessionManager;
+import org.apache.shiro.session.mgt.SessionManager;
 import org.apache.shiro.subject.Subject;
 
 import static java.util.Objects.requireNonNull;
@@ -76,6 +78,11 @@ public class HttpSecurityModule extends ServletModule {
   private static final Arg<Set<Module>> SHIRO_REALM_MODULE = Arg.create(
       ImmutableSet.of(MoreModules.lazilyInstantiated(IniShiroRealmModule.class)));
 
+  @CmdLine(name = "shiro_after_auth_filter",
+      help = "Fully qualified class name of the servlet filter to be applied after the"
+          + " shiro auth filters are applied.")
+  private static final Arg<Class<? extends Filter>> SHIRO_AFTER_AUTH_FILTER = Arg.create();
+
   @VisibleForTesting
   static final Matcher<Method> AURORA_SCHEDULER_MANAGER_SERVICE =
       GuiceUtils.interfaceMatcher(AuroraSchedulerManager.Iface.class, true);
@@ -107,22 +114,33 @@ public class HttpSecurityModule extends ServletModule {
 
   private final HttpAuthenticationMechanism mechanism;
   private final Set<Module> shiroConfigurationModules;
+  private final Optional<Key<? extends Filter>> shiroAfterAuthFilterKey;
 
   public HttpSecurityModule() {
-    this(HTTP_AUTHENTICATION_MECHANISM.get(), SHIRO_REALM_MODULE.get());
+    this(
+        HTTP_AUTHENTICATION_MECHANISM.get(),
+        SHIRO_REALM_MODULE.get(),
+        SHIRO_AFTER_AUTH_FILTER.hasAppliedValue() ? Key.get(SHIRO_AFTER_AUTH_FILTER.get()) : null);
   }
 
   @VisibleForTesting
-  HttpSecurityModule(Module shiroConfigurationModule) {
-    this(HttpAuthenticationMechanism.BASIC, ImmutableSet.of(shiroConfigurationModule));
+  HttpSecurityModule(
+      Module shiroConfigurationModule,
+      Key<? extends Filter> shiroAfterAuthFilterKey) {
+
+    this(HttpAuthenticationMechanism.BASIC,
+        ImmutableSet.of(shiroConfigurationModule),
+        shiroAfterAuthFilterKey);
   }
 
   private HttpSecurityModule(
       HttpAuthenticationMechanism mechanism,
-      Set<Module> shiroConfigurationModules) {
+      Set<Module> shiroConfigurationModules,
+      Key<? extends Filter> shiroAfterAuthFilterKey) {
 
     this.mechanism = requireNonNull(mechanism);
     this.shiroConfigurationModules = requireNonNull(shiroConfigurationModules);
+    this.shiroAfterAuthFilterKey = Optional.ofNullable(shiroAfterAuthFilterKey);
   }
 
   @Override
@@ -153,6 +171,14 @@ public class HttpSecurityModule extends ServletModule {
     install(guiceFilterModule(H2_PATH));
     install(guiceFilterModule(H2_PATH + "/*"));
     install(new ShiroWebModule(getServletContext()) {
+
+      // Replace the ServletContainerSessionManager which causes subject.runAs(...) in a
+      // downstream user-defined filter to fail. See also: SHIRO-554
+      @Override
+      protected void bindSessionManager(AnnotatedBindingBuilder<SessionManager> bind) {
+        bind.to(DefaultSessionManager.class).asEagerSingleton();
+      }
+
       @Override
       @SuppressWarnings("unchecked")
       protected void configureShiroWeb() {
@@ -167,18 +193,36 @@ public class HttpSecurityModule extends ServletModule {
         switch (mechanism) {
           case BASIC:
             addFilterChain(H2_PATTERN, NO_SESSION_CREATION, AUTHC_BASIC, config(PERMS, H2_PERM));
-            addFilterChain(ALL_PATTERN, NO_SESSION_CREATION, config(AUTHC_BASIC, PERMISSIVE));
+            addFilterChainWithAfterAuthFilter(config(AUTHC_BASIC, PERMISSIVE));
             break;
 
           case NEGOTIATE:
             addFilterChain(H2_PATTERN, NO_SESSION_CREATION, K_STRICT, config(PERMS, H2_PERM));
-            addFilterChain(ALL_PATTERN, NO_SESSION_CREATION, K_PERMISSIVE);
+            addFilterChainWithAfterAuthFilter(K_PERMISSIVE);
             break;
 
           default:
             addError("Unrecognized HTTP authentication mechanism: " + mechanism);
             break;
         }
+      }
+
+      private void addFilterChainWithAfterAuthFilter(Key<? extends Filter> filter) {
+        if (shiroAfterAuthFilterKey.isPresent()) {
+          addFilterChain(filter, shiroAfterAuthFilterKey.get());
+        } else {
+          addFilterChain(filter);
+        }
+      }
+
+      @SuppressWarnings("unchecked")
+      private void addFilterChain(Key<? extends Filter> filter) {
+        addFilterChain(ALL_PATTERN, NO_SESSION_CREATION, filter);
+      }
+
+      @SuppressWarnings("unchecked")
+      private void addFilterChain(Key<? extends Filter> filter1, Key<? extends Filter> filter2) {
+        addFilterChain(ALL_PATTERN, NO_SESSION_CREATION, filter1, filter2);
       }
     });
 
